# trapped-mind-rust

./: Cargo.toml  README.md  SPEC.md
docs/superpowers/plans/: 2026-03-11-trapped-mind-v3.md  2026-03-12-canvas-drawing-language.md  2026-03-12-production-ready-refactor.md  2026-03-12-tool-activity-system.md
docs/superpowers/specs/: 2026-03-12-canvas-drawing-language-design.md  2026-03-12-production-ready-refactor-design.md
src/: app.rs  config.rs  decision.rs  error.rs  history.rs  llm.rs  main.rs  ollama.rs  pet_states.rs  system.rs
src/canvas_lang/: color.rs  font.rs  mod.rs  parser.rs  primitives.rs  renderer.rs
src/tools/: draw_canvas.rs  mod.rs  observe_sensors.rs  read_journal.rs  think_aloud.rs  write_journal.rs
src/ui/: canvas.rs  chat.rs  config.rs  input.rs  mod.rs  pet.rs  stats.rs
