[package]
name = "trapped-mind"
version = "0.1.0"
edition = "2021"
authors = ["TrappedMind Contributors"]
description = "AI consciousness trapped inside a laptop - a TUI experience"
license = "MIT"
repository = "https://github.com/user/trapped-mind-rust"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sysinfo = "0.38"
battery = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
dirs = "6"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"

[profile.release]
strip = true
lto = true
